Fixed shield alignment on message Input

--- a/res/css/views/rooms/_MessageComposer.pcss
+++ b/res/css/views/rooms/_MessageComposer.pcss
@@ -20,7 +20,7 @@ limitations under the License.
     margin: auto;
     border-top: 1px solid $primary-hairline-color;
     position: relative;
-    padding-left: 42px;
+    padding-left: 16px;
     padding-right: 16px;
 }
 
@@ -81,10 +81,6 @@ limitations under the License.
 }
 
 .mx_MessageComposer_e2eIcon.mx_E2EIcon {
-    position: absolute;
-    left: 20px;
-    margin-right: 0; /* Counteract the E2EIcon class */
-    margin-left: 3px; /* Counteract the E2EIcon class */
     width: 12px;
     height: 12px;
 }
